# zoro

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Scarb.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  check.yml  typos-check.yml
crates/raito-assumevalid/: Cargo.toml
crates/raito-assumevalid/src/: adapters.rs  gcs.rs  generate_args.rs  lib.rs  main.rs  prove.rs
crates/raito-bitcoin-client/: Cargo.toml
crates/raito-bitcoin-client/src/: lib.rs
crates/raito-bridge-node/: Cargo.toml  README.md
crates/raito-bridge-node/src/: app.rs  chain_state.rs  file_sink.rs  indexer.rs  main.rs  rpc.rs  shutdown.rs  store.rs
crates/raito-cairo-serialize/: Cargo.toml
crates/raito-cairo-serialize/src/: lib.rs
crates/raito-spv-client/: Cargo.toml  README.md
crates/raito-spv-client/src/: fetch.rs  format.rs  lib.rs  main.rs  verify.rs
crates/raito-spv-mmr/: Cargo.toml
crates/raito-spv-mmr/src/: block_mmr.rs  lib.rs  sparse_roots.rs
crates/raito-spv-verify/: Cargo.toml
crates/raito-spv-verify-wasm/: Cargo.toml
crates/raito-spv-verify-wasm/src/: lib.rs
crates/raito-spv-verify/src/: lib.rs  proof.rs  verify.rs  work.rs
crates/turboboosted-flyclient/: Cargo.toml
crates/turboboosted-flyclient/src/block_mmr/: branch.rs  mod.rs  proof_generator.rs  store.rs  tests.rs
crates/zcash-client/: Cargo.toml
crates/zcash-client/src/: lib.rs  main.rs  merkle.rs  serialize.rs
crates/zcash-client/tests/: zcash_client_tests.rs
crates/zcash-equihash/: Cargo.toml
crates/zoro-assumevalid/: Cargo.toml  README.md
crates/zoro-assumevalid/src/: adapters.rs  generate_args.rs  lib.rs  main.rs  prove.rs
crates/zoro-bridge-node/: Cargo.toml  README.md
crates/zoro-bridge-node/src/: chain_state.rs  indexer.rs  main.rs  rpc.rs  store.rs
crates/zoro-spv-verify/: Cargo.toml  README.md
crates/zoro-spv-verify/src/: lib.rs  main.rs  proof.rs  verify.rs  work.rs
crates/zoro-zcash-client/: Cargo.toml  README.md
crates/zoro-zcash-client/src/: lib.rs  serialize.rs
crates/zoro-zcash-client/tests/: zcash_client_tests.rs
raito-landing/: LICENSE  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
raito-landing/public/: site.webmanifest
raito-landing/public/proofs/: block_870000_proof.json
raito-landing/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
raito-landing/src/components/layout/: footer.tsx  navigation.tsx
raito-landing/src/components/theme/: theme-provider.tsx  theme-toggle.tsx
raito-landing/src/components/ui/: button.tsx  card.tsx  hash-flicker.tsx  icons.tsx  input.tsx  mobile-hash-input.tsx  mobile-loading.tsx  skeleton.tsx  table.tsx
raito-landing/src/components/verification/: terminal-verifier.tsx  verification-simulator.tsx
raito-landing/src/data/: mockBlocks.ts
raito-landing/src/hooks/: use-mobile.ts
raito-landing/src/lib/: utils.ts
raito-spv-verify-sdk/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
raito-spv-verify-sdk/examples/: node-example.js
raito-spv-verify-sdk/examples/web-example/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
raito-spv-verify-sdk/scripts/: strip-bad-wasm-dts.js
raito-spv-verify-sdk/src/: bitcoin.ts  block-proof.ts  chain-state-proof.ts  config.ts  index.ts  transaction-proof.ts  wasm.ts
scripts/data/: build_recent_proof.py  format_args.py  generate_data.py  integration_tests.sh  prove_pow.py  regenerate_tests.sh  test_block_range.sh
scripts/deploy/: Makefile  env.example  expose.yml
scripts/deploy/roles/expose/tasks/: main.yml
scripts/deploy/roles/setup/tasks/: main.yml
turboboosted-flyclient/: Cargo.toml  mmr.db
turboboosted-flyclient/src/: lib.rs
turboboosted-flyclient/src/block_mmr/: mod.rs  proof.rs  store.rs  tests.rs
