[workspace]
resolver = "2"
members = [
    "crates/zcash-client",
    "crates/raito-spv-verify",
    "crates/raito-spv-client",
    "crates/raito-bridge-node",
]

[patch."https://github.com/m-kus/cairo-vm"]
cairo-vm = { git = "https://github.com/maciejka/cairo-vm", rev = "19d8a07ce9799a8af9db6f8a14a8accaad900214" }

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd"] }
async-trait = "0.1"

# zcash
zcash_primitives = { version = "0.26.1" }
zcash_protocol = { version = "0.7.1" }
zebra-chain = {version = "3.1.0"}
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoincore-rpc-json = "0.19.0"

# RPC
jsonrpsee = { version = "0.25.1", features = ["http-client", "async-client"] }
base64 = "0.21"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

# Hashing
blake2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
hex = "0.4"
bincode = "1.3"

# BigInt
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.10"
