[workspace]
members = [
    "crates/zoro-spv-verify",
    "crates/zoro-bridge-node",
    "crates/zoro-zcash-client",
    "crates/zoro-assumevalid",
]
resolver = "2"

# [patch.crates-io]
# cairo-lang-executable = { git = "https://github.com/m-kus/cairo", rev = "13f3701f3d6c50086beb25ee3a191949bcc8dddf" }
# cairo-lang-runner = { git = "https://github.com/m-kus/cairo", rev = "13f3701f3d6c50086beb25ee3a191949bcc8dddf" }
# cairo-lang-casm = { git = "https://github.com/m-kus/cairo", rev = "13f3701f3d6c50086beb25ee3a191949bcc8dddf" }
# cairo-lang-execute-utils = { git = "https://github.com/m-kus/cairo", rev = "13f3701f3d6c50086beb25ee3a191949bcc8dddf" }
# cairo-vm = { git = "https://github.com/m-kus/cairo-vm", rev = "c9aa51b9360a6c89389cf88c93ac30b5213e64a7" }
# stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "e8bc9571675bb654b6e26a7bd53838a6ae78c344" }

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd"] }
async-trait = "0.1"
bytes = "1.0"
# zcash
zcash_primitives = { version = "0.26.1" }
zcash_protocol = { version = "0.7.1" }
zcash_history = { version = "0.4" }
zebra-chain = { version = "3.1.0" }

# RPC
jsonrpsee = { version = "0.25.1", features = ["http-client", "async-client"] }
base64 = "0.21"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }


# Stwo-cairo
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "45d0180", default-features = false }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "6b45dd698a31d76c43f1e400cdb7ed8c23f97157", default-features = false }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "6b45dd698a31d76c43f1e400cdb7ed8c23f97157" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "6b45dd698a31d76c43f1e400cdb7ed8c23f97157" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "6b45dd698a31d76c43f1e400cdb7ed8c23f97157" }
cairo-program-runner-lib = { git = "https://github.com/starkware-libs/proving-utils", rev = "30a03d3e6e2ebe18c07f496f68d340ccb5266dec", default-features = false }
cairo-vm = { version = "3.0.0", features = ["std"] }
# Starknet
starknet-ff = "0.3.7"
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

# Hashing
blake2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
hex = "0.4"
bincode = "1.3"

# BigInt
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.10"
