[package]
name = "raito-bridge-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core SPV functionality
raito-spv-core = { path = "../raito-spv-core" }
raito-spv-client = { path = "../raito-spv-client" }

# Async runtime
tokio.workspace = true
# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Bitcoin RPC and types (re-exported from raito-spv-core but needed for specific features)
bitcoin.workspace = true
# Storage
libmdbx.workspace = true
# CLI
clap.workspace = true
dotenv.workspace = true
# Hashing
blake2.workspace = true
# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
# BigInt
num-bigint.workspace = true
num-traits.workspace = true
# Error handling
thiserror.workspace = true
anyhow.workspace = true
# Retry logic
backoff = { version = "0.4", features = ["futures", "tokio"] }
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Testing
mockall.workspace = true
wiremock.workspace = true
tempfile.workspace = true
