[package]
name = "raito-spv-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "raito_spv_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

# Core SPV functionality
raito-spv-core = { path = "../raito-spv-core" }

# Bitcoin RPC and types
bitcoin = { workspace = true }
num-bigint = "0.4.3"

# CLI and env
clap = { workspace = true }
dotenv = { workspace = true }

# Async runtime
tokio = { workspace = true }
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Stwo-cairo
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "0e90b31", features = [
    "parallel",
], default-features = false }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "bbe3e469bc636b89c37cb385854447bd46277b3b", features = ["std"] }
starknet-ff = "0.3.7"

# Serialization
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Compression
bzip2 = "0.4"

# Date/time handling
chrono = "0.4"
