[package]
name = "raito-spv-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "raito_spv_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

raito-spv-mmr = { path = "../raito-spv-mmr" }
raito-spv-verify = { path = "../raito-spv-verify" }
raito-bitcoin-client = { path = "../raito-bitcoin-client" }

# Bitcoin RPC and types
bitcoin = { workspace = true }
num-bigint = "0.4.3"

# CLI and env
clap = { workspace = true }
dotenv = { workspace = true }

# Async runtime
tokio = { workspace = true }
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Stwo-cairo
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "0e90b31", features = [
    "parallel",
], default-features = false }
cairo-air = { git = "https://github.com/maciejka/stwo-cairo", rev = "e5981958234c4b28fa2b4c3368a0290ec3fc57c2", features = ["std"] }
starknet-ff = "0.3.7"

# Serialization
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Compression
bzip2 = "0.4"

# Date/time handling
chrono = "0.4"
