[package]
name = "raito-spv-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "raito_spv_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

raito-spv-mmr = { path = "../raito-spv-mmr" }
raito-spv-verify = { path = "../raito-spv-verify" }
raito-bitcoin-client = { path = "../raito-bitcoin-client" }

# Bitcoin RPC and types
bitcoin = { workspace = true }
num-bigint = "0.4.3"

# CLI and env
clap = { workspace = true }
dotenv = { workspace = true }

# Async runtime
tokio = { workspace = true }
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Stwo-cairo
stwo = { workspace = true }
cairo-air = { workspace = true }
starknet-ff = { workspace = true }

# Serialization
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Compression
bzip2 = "0.4"

# Date/time handling
chrono = "0.4"
