[package]
name = "raito-spv-mmr"
version = "0.1.0"
edition = "2021"

[features]
sqlite = ["accumulators/sqlite"]

[dependencies]
async-trait.workspace = true

# Merkle mountain range
accumulators.workspace = true

# Bitcoin RPC and types
#jsonrpsee.workspace = true
bitcoin.workspace = true
#bitcoincore-rpc-json.workspace = true
base64.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# BigInt (for sparse_roots serialization)
num-bigint.workspace = true
num-traits.workspace = true

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Async runtime - properly configured for WASM
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.36", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.36", default-features = false, features = ["rt", "macros", "sync", "io-util", "time"] }

[dev-dependencies]
# Testing
mockall.workspace = true
tempfile.workspace = true