[package]
name = "raito-spv-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

# Core SPV functionality
raito-spv-mmr = { path = "../raito-spv-mmr" }

# Bitcoin types
bitcoin = { workspace = true }

# Logging
tracing = "0.1"

# Serialization
hex = "0.4.3"
serde = { workspace = true }
num-bigint = "0.4.3"

# Starknet
starknet-ff = { workspace = true }

# Stwo-cairo
cairo-air = { workspace = true }
stwo = { workspace = true }
