[package]
name = "turboboosted-flyclient"
version = "0.1.0"
edition = "2021"

[dependencies]
zcash_primitives.workspace = true
zcash_history.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
primitive-types = "0.12"
sqlx.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
futures = "0.3"

[[bin]]
name = "sync"
path = "src/bin/sync.rs"
