[package]
name = "zcash-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zcash types
zebra-chain.workspace = true

# RPC client
jsonrpsee = { workspace = true }

# Serialization
serde = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Retry logic
backoff = { version = "0.4", features = ["futures", "tokio"] }

# Logging
tracing = { workspace = true } 

# Hashing
sha2 = "0.10"
