[package]
name = "zoro-assumevalid"
version = "0.1.0"
edition = "2021"

[lib]
name = "zoro_assumevalid"
path = "src/lib.rs"

[[bin]]
name = "zoro-assumevalid"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
regex = "1.0"
num-bigint = { workspace = true }
num-traits = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }

# Zoro dependencies
stwo-cairo-serialize = { workspace = true }
zoro-spv-verify = { path = "../zoro-spv-verify" }
zebra-chain = { workspace = true }


# Stwo-cairo
cairo-air = { workspace = true }
cairo-vm = { workspace = true }
stwo = { workspace = true }
stwo_cairo_prover = { workspace = true }
stwo-cairo-adapter = { workspace = true }
cairo-program-runner-lib = { workspace = true }

# Starknet
starknet-ff = { workspace = true }

# Memory stats
memory-stats = "1.0"

# Compression
flate2 = "1.0"
percent-encoding = "2"
google-cloud-storage = "1.1.0"
gcp_auth = "0.11"
