[package]
name = "zoro-bridge-node"
version = "0.1.0"
edition = "2021"

[dependencies]
zoro-zcash-client = { path = "../zoro-zcash-client" }
zoro-spv-verify = { path = "../zoro-spv-verify" }

# Zcash types
zebra-chain.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Storage
sqlx.workspace = true
bincode.workspace = true
# CLI
clap.workspace = true
dotenv.workspace = true
# Hashing
blake2.workspace = true
# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
# BigInt
num-bigint.workspace = true
num-traits.workspace = true
# Error handling
thiserror.workspace = true
anyhow.workspace = true
# Retry logic
backoff = { version = "0.4", features = ["futures", "tokio"] }
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Testing
mockall.workspace = true
wiremock.workspace = true
tempfile.workspace = true
