[package]
name = "zoro-spv-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

# Zcash types
zebra-chain.workspace = true
zoro-zcash-client = { path = "../zoro-zcash-client" }

# Logging
tracing = "0.1"

# Serialization
hex = "0.4.3"
serde = { workspace = true }
num-bigint = "0.4.3"
starknet-ff = "0.3.7" 

# Stwo-cairo
cairo-air = { workspace = true }
stwo = { workspace = true }
